--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         .sk-logo-circle {
           width: 32px;
           height: 32px;
-          background-color: #3b82f6; /* Brand Blue */
+          background-color: #29ec50; /* Brand Blue */
           border-radius: 6px;
           opacity: 0.8;
           animation: pulse-fade 2s infinite ease-in-out;
@@ -135,8 +135,8 @@
           width: 50px;
           height: 50px;
           border: 4px solid #e5e7eb;
-          border-top-color: #3b82f6; /* Brand Blue */
-          border-right-color: #3b82f6;
+          border-top-color: #3bf66a; /* Brand Blue */
+          border-right-color: #23ca3a;
           border-radius: 50%;
           animation: spin 0.8s linear infinite;
         }
@@ -184,7 +184,7 @@
             <div class="center-loading-box">
               <div class="twin-spinner"></div> <div>
                 <div class="loading-text">Edges Africa LMS</div>
-                <div class="sub-text">Starting up server...</div>
+                <div class="sub-text">Loading...</div>
               </div>
             </div>
           </div>
@@ -193,7 +193,7 @@
       
       <noscript>
         <div style="padding: 20px; color: red; text-align: center;">
-          JavaScript is required to use this application.
+          JavaScript is required to use this application. <br>  Please update your Browser. 
         </div>
       </noscript>
 
